# Implementing-Programming-Languages

./: README.md
lab1/: lab1c.imp
lab1/_build/: .db  .digest-db  log
lab1/imp/: Makefile  dune  imp.ml  run_tests.py
lab1/sexpr/: parser.ml
lab2/_build/: .db  .digest-db  log
lab2/sexpr/: dune  parser_test.ml  repl_test.ml
lab2/uscheme/: Makefile  ast.ml  ast.mli  basis.ml  basis.mli  dune  env.ml  env.mli  error.ml  error.mli  eval.ml  eval.mli  ir.ml  ir.mli  quote.ml  run_tests.py  uscheme  uscheme.ml
lab2/uscheme/tests/: booleans.scm  lab2a.scm  lab2c.scm  let_forms.scm  lexical_scoping.scm  lists.scm  while.scm
lab2/uscheme/tests/syntax/: test_syntax_errors
lab2/uscheme/tests/syntax/syntax_tests/: def_dxd.scm  def_dxx.scm  def_xdd.scm  def_xdx.scm  def_xdydzx.scm  def_xdyzd.scm  def_xdyzx.scm  def_xxx.scm  define_no_body.scm  definex1_no_body.scm  definex2_no_body.scm  dot_let.scm  dot_let_star.scm  dot_letrec.scm  double_dot_let.scm  double_dot_let_star.scm  double_dot_letrec.scm  double_let.scm  double_let_star.scm  double_letrec.scm  double_val.scm  empty_valrec.scm  lambda_dxx.scm  lambda_xdx.scm  lambda_xdydzx.scm  lambda_xdyzd.scm  lambda_xdyzx.scm  lambda_xxx.scm  lambdax1_no_body.scm  lambdax2_no_body.scm  let_star_no_body.scm  letrec_no_body.scm  set_dot.scm  val_dot.scm  valrec_dot.scm  var_and.scm  var_begin.scm  var_check-error.scm  var_check-expect.scm  var_check_error.scm  (+15 more)
lab3/sexpr/: lexer_test.ml
lab3/uscheme_plus/: Makefile  ast.ml  ast.mli  basis.ml  dune  env.ml  env.mli  error.ml  error.mli  eval.ml  eval.mli  fstack.ml  (+5 more)
(+185 files in other folders)
